--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
 		"yargs": "^12.0.5"
 	},
 	"dependencies": {
+		"hamburgers": "^1.1.3",
 		"jquery": "^3.4.1",
 		"select2": "^4.0.7",
 		"smart-grid": "^2.1.2"
