--- a/package.json
+++ b/package.json
@@ -52,8 +52,10 @@
 	},
 	"dependencies": {
 		"hamburgers": "^1.1.3",
+		"izimodal": "^1.5.1",
 		"jquery": "^3.4.1",
 		"select2": "^4.0.7",
+		"slick-carousel": "^1.8.1",
 		"smart-grid": "^2.1.2"
 	}
 }
