--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
 		"hamburgers": "^1.1.3",
 		"izimodal": "^1.5.1",
 		"jquery": "^3.4.1",
+		"jquery-mousewheel": "^3.1.13",
+		"malihu-custom-scrollbar-plugin": "^3.1.5",
 		"select2": "^4.0.7",
 		"slick-carousel": "^1.8.1",
 		"smart-grid": "^2.1.2"
