--- a/package.json
+++ b/package.json
@@ -52,9 +52,10 @@
 	},
 	"dependencies": {
 		"hamburgers": "^1.1.3",
-		"izimodal": "^1.5.1",
+		"izimodal-1.6.0": "^1.6.1",
 		"jquery": "^3.4.1",
 		"jquery-mousewheel": "^3.1.13",
+		"json-server": "^0.15.0",
 		"malihu-custom-scrollbar-plugin": "^3.1.5",
 		"select2": "^4.0.7",
 		"slick-carousel": "^1.8.1",
